# duckdb_get_start

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
